AC_INIT([FORSE], [0.1-devel])

AC_ERLANG_NEED_ERLC
AC_ERLANG_NEED_ERL

AX_PYTHON_PATH
AX_PYTHON_VERSION_ENSURE([2.6])

AX_PYTHON_MODULE([PyQt4.Qt])
AX_PYTHON_MODULE([PyQt4.QtCore])
AX_PYTHON_MODULE([PyQt4.QtGui])
AX_PYTHON_MODULE([twisted])
AX_PYTHON_MODULE([twotp])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
