AC_INIT(FORSE, [1.0-beta])

AC_ERLANG_NEED_ERLC
AC_ERLANG_NEED_ERL

AX_PYTHON_PATH
AX_PYTHON_VERSION_ENSURE([2.6])

AX_PYTHON_MODULE([twisted])
AX_PYTHON_MODULE([twotp])

AX_PYTHON_MODULE([PyQt4.Qt])
AX_PYTHON_MODULE([PyQt4.QtCore])
AX_PYTHON_MODULE([PyQt4.QtGui])

AC_ARG_VAR([PYRCC], [PyQt4 resource compiler])
AC_PATH_PROG([PYRCC], pyrcc4)
AC_ARG_VAR([PYUIC], [PyQt4 user interface compiler])
AC_PATH_PROG([PYUIC], pyuic4)

AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([src/forse/Makefile])
AC_CONFIG_FILES([environment])
AC_OUTPUT
